@@ -1,5 +1,8 @@
 2008-06-17  Sébastien Sablé  <sable@users.sourceforge.net>
 
+	* Sybase.py: Use CS_DATETIME_TYPE when passing CS_DATE_TYPE to
+	ct_setparam with NULLDATA to avoid a sybase limitation
+
 	* cmd.c: Adding ct_cmd_props wrapper
 
 	* Adding implicit conversion for CS_DATE_TYPE in CS_DATETIME_TYPE DataBuf
